# gw_simulator

./: LICENSE  MANIFEST.in  README.md  gw_simulator_bilby.ipynb  pyproject.toml
src/gw_simulator/: __init__.py  generate.py
src/gw_simulator/simulator/: interface.py
tests/: test_generate.py  test_pbc.py
