[project]
name = "gw-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Steinbach", email = "p.steinbach@hzdr.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gw-simulator = "gw_simulator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
